# opendrive_web_tool

./: .gitignore  README.md  index.html  package-lock.json  package.json  scratch_test.js  vite.config.js
native/: CMakeLists.txt  README.md  odr_json_parser.cpp
public/: editor-legacy.html  index.html
scripts/: build-native.sh  compare-xodr-maps.cjs  dev.sh  first-run-dev.sh  sync_vts_bins.sh
src/: geometrySanitize.cjs  jili_west.xodr  junctionGenerator.js  lineArcGeometry.cjs  server.js  vtsRules.js  xodrSerializer.js
tmp/: roundtrip-jili_west.xodr  roundtrip-regen-jili_west.xodr  roundtrip-regen-standard_opendrive_maps_jili.xodr  roundtrip-standard_opendrive_maps_jili.xodr
webapp/: App.vue  ThreeRoadViewer.vue  appLogic.js  backgroundMap.js  editorUtils.js  geometrySanitize.js  laneLinkRules.js  lineArcGeometry.js  pointCloudParser.js  qualityCheck.js  roadColors.js  roadOpenDriveXml.js  styles.css  useAppShell.js  xodrParsers.js
webapp/logic/: canvas.js  canvasInput.js  constants.js  editorState.js  formatters.js  importApi.js  measure.js  roadActions.js  roadCore.js  roadForm.js  roadListUi.js  roadlist.js  useAppLogic.js  xodrIO.js
